editor-components/header/header24/header24.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
.container {
  display: flex;
  align-items: center;
  padding: 0;
  background-color: transparent;
  position: relative;
  min-height: 100px;
  &.no-image{
    background-color: var(--composer-html-background);
  }
  .max-content {
    justify-content: center;
    display: flex;
    position: relative;
    z-index: 2;
    .wrapper {
      width: 100%;
      height: 100%;

      .carousel {
        width: 100%;

        .item {
          width: 100%;
          height: 100vh;
          position: relative;
          .main-content {
            margin: auto;
            display: flex;
            height: 100%;
            z-index: 1;

            .left {
              z-index: 1;
              flex: 1;
              padding: var(--composer-gap-md) var(--composer-gap-xl);

              .content {
                height: 100%;
                display: flex;
                flex-direction: column;
                text-align: center;
                align-items: center;
                justify-content: center;
                gap: var(--composer-gap-lg);

                .flower {
                  z-index: 8;
                  opacity: 0;
                  transform: translateY(100px);
                  transition-property: opacity, transform;
                  transition-duration: 0.5s;
                  transition-timing-function: cubic-bezier(0, 0.87, 0.58, 1);
                  transition-delay: 0.1s;
                }
                .flower.active {
                  opacity: 1;
                  transform: translateY(0px);
                }

                .title {
                  z-index: 2;
                  font-size: 4rem;
                  width: 60%;
                  opacity: 0;
                  transform: translateY(100px);
                  transition-property: opacity, transform;
                  transition-duration: 0.5s;
                  transition-timing-function: cubic-bezier(0, 0.87, 0.58, 1);
                  transition-delay: 0.2s;
                  margin: 0;
                  text-align: center;
                  color: #93646a;


                  &.title-no-image {
                    color: var(--composer-font-color-primary);
                  }

                  &.active {
                    opacity: 1;
                    transform: translateY(0px);
                  }

                  &.no-image {
                    padding: 0;
                    width: 100%;
                  }
                }

                .description {
                  z-index: 2;
                  font-size: 2rem;
                  color: #93646a;
                  width: 60%;
                  opacity: 0;
                  transform: translateY(100px);
                  transition-property: opacity, transform;
                  transition-duration: 0.5s;
                  transition-timing-function: cubic-bezier(0, 0.87, 0.58, 1);
                  transition-delay: 0.3s;

                  &.description-no-image {
                    color: var(--composer-font-color-primary);
                  }

                  &.active {
                    opacity: 1;
                    transform: translateY(0px);
                  }

                  &.no-image {
                    padding: 0;
                    width: 100%;
                  }
                }

                .buttons {
                  z-index: 2;
                  display: flex;
                  gap: var(--composer-gap-md);
                  opacity: 0;
                  transform: translateY(var(--composer-gap-md));
                  transition-property: opacity, transform;
                  transition-duration: 0.5s;
                  transition-timing-function: ease;
                  transition-delay: 0.4s;
                  .button-wrapper {
                    .button {
                      content: "";
                    }
                  }
                }
                .buttons.active {
                  opacity: 1;
                  transform: translateY(0px);
                }
              }
            }

            .right {
              position: relative;
              display: flex;
              flex: 1 1;
              z-index: 2;
              width: 100%;
              height: 100%;
              justify-content: center;

              .image-wrapper {
                position: relative;
                height: 100%;
                width: 60%;
                display: flex;
                align-items: end;
                justify-content: start;

                .image {
                  position: absolute;
                  bottom: 0;
                  left: 0;
                  object-fit: cover;
                  max-width: 100%;
                  opacity: 0;
                  transform: translateX(100px);
                  transition-property: opacity, transform;
                  transition-duration: 1s;
                  transition-delay: 0.3s;
                  transition-timing-function: ease;

                  &.active {
                    opacity: 1;
                    transform: translateX(0px);
                  }
                }
              }
            }
          }
          .arrow-wrapper {
            position: absolute;
            display: flex;
            width: 100%;
            height: 100%;
            top: 0px;
            left: 0px;
            z-index: 10;

            .arrow-prev-wrapper,
            .arrow-next-wrapper,
            .arrow-next-wrapper-no-image,
            .arrow-prev-wrapper-no-image {
              position: absolute;
              top: 50%;
              transform: translateY(-50%);
              .arrow-prev,
              .arrow-next {
                .icon {
                  font-size: 3.5rem;
                  color: white;
                }
              }
            }
            .arrow-next-wrapper-no-image,
            .arrow-prev-wrapper-no-image {
              .arrow-prev,
              .arrow-next {
                .icon {
                  color: var(--composer-font-color-primary);
                }
              }
            }
            .arrow-prev-wrapper,
            .arrow-prev-wrapper-no-image {
              left: 50px;
            }
            .arrow-next-wrapper,
            .arrow-next-wrapper-no-image {
              right: 50px;
            }
          }
        }
      }
    }
    .dots-container{
      position: absolute;
      bottom: var(--composer-gap-md);
      left: 0px;
      width: 100%;
      height: auto;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: var(--composer-gap-md);
      .dots{
        position: relative;
        display: flex;
        gap: var(--composer-gap-sm);
        align-items: center;
        &:hover{
          .line{
            width: 40px;
          }
        }
        .number{
          color:white;
          font-size: 1.5rem;
          &.no-image{
            color: var(--composer-font-color-primary);
          }      
        }
        .line{
          width: 15px;
          height: 2px;
          background-color: white;
          transition: all 0.5s ease;
          &.active{
            width: 45px;
          }
          &.no-image{
            background-color: var(--composer-font-color-primary);
          }
        }
      }
    }

  }
  .background-wrapper{
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 1;
    top: 0px;
    left: 0px;
    .background-container{
      height: 100%;
      .background-image-container{
        height: 100%;
        overflow: hidden;
        .background-image{
          height: 100%;
          object-fit: cover;
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    flex-direction: column;
    .max-content {
      flex-direction: column;
      .wrapper {
        .carousel {
          .item {
            .main-content {
              flex-direction: column;

              &.no-image-content {
                padding-bottom: var(--composer-gap-lg);
              }
              .left {
                padding: var(--composer-gap-md) var(--composer-gap-lg);
                .content {
                  gap: var(--composer-gap-md);
                  .title {
                    font-size: 2.5rem;
                    padding: 0;
                  }

                  .description {
                    font-size: 1.5rem;
                    padding: 0;
                  }

                  .buttons {
                    .button {
                    }
                  }
                }
              }
              .left,
              .right {
                width: 100%;
              }

              .right {
                .image-wrapper {
                  width: 50%;
                  .image {
                    position: relative;
                  }
                }
              }
            }
            .arrow-wrapper {
              display: none;
            }

            .background-image {
              height: 100%;

              :first-child {
                height: 100%;
                width: 100%;
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .wrapper {
        .carousel {
          .item {
            height: fit-content;
            .main-content {
              .left {
                padding: var(--composer-gap-md);
                .content {
                  .title {
                    font-size: 2rem;
                    width: 100%;
                  }

                  .description {
                    font-size: 1rem;
                    width: 100%;
                  }
                }
              }
              .right {
                .image-wrapper {
                  width: 75%;
                }
              }
            }
            .arrow-wrapper {
              display: none;
            }
            .no-image-content {
              padding-bottom: 30px;
            }
          }
        }
      }
      .dots-container{
        display: none;
      }
    }
  }
}

